Backend und Swift angepasst damit Spieler Koords in der db geuptaded werden