@@ -40,41 +40,72 @@ public class PlayerRessources {
         playerRepository.updatePlayerPos(player);
     }
 
+    @PUT
+    @Path("/{id}")
+    @Transactional
+    public PlayerDTO updatePlayer(@PathParam("id") Long id, PlayerDTO dto) {
+        Player player = playerRepository.findById(id);
+        if (player == null) {
+            throw new WebApplicationException("Player not found", 404);
+        }
+
+        // Name optional mit updaten, falls gewünscht:
+        if (dto.name() != null) {
+            player.setName(dto.name());
+        }
+
+        player.setLatitude(dto.latitude());
+        player.setLongitude(dto.longitude());
+
+        return new PlayerDTO(
+                player.getId(),
+                player.getName(),
+                player.getLatitude(),
+                player.getLongitude()
+        );
+    }
+
+
     @POST
     @Path("/nearby")
     @Transactional
     public List<PlayerDTO> getNearbyPlayers(NearbyRequest req) {
 
-        List<Player> allPlayers = em.createQuery("SELECT p FROM Player p", Player.class)
-                .getResultList();
+        List<Player> allPlayers = em.createQuery(
+                "SELECT p FROM Player p", Player.class
+        ).getResultList();
 
         return allPlayers.stream()
-                .filter(p ->
-                        // Eigener Spieler immer anzeigen
-                        p.getId().equals(req.playerId)
-                                ||
-                                // andere Spieler nach Distanz
-                                distance(
-                                        req.latitude,
-                                        req.longitude,
-                                        p.getLatitude(),
-                                        p.getLongitude()
-                                ) <= req.radius
-                )
-                .map(p -> {
-                    PlayerDTO dto = new PlayerDTO();
-                    dto.id = p.getId();
-                    dto.name = p.getName();
-                    dto.latitude = p.getLatitude();
-                    dto.longitude = p.getLongitude();
-                    return dto;
+                .filter(p -> {
+                    // Spieler ohne Koords rausfiltern
+                    if (p.getLatitude() == 0 || p.getLongitude() == 0) {
+                        return false;
+                    }
+                    // eigener Spieler immer anzeigen
+                    if (p.getId().equals(req.playerId())) {
+                        return true;
+                    }
+                    // Distanz in Metern berechnen
+                    double dist = distance(
+                            req.latitude(),
+                            req.longitude(),
+                            p.getLatitude(),
+                            p.getLongitude()
+                    );
+                    return dist <= req.radius();
                 })
-                .collect(Collectors.toList());
+                .map(p -> new PlayerDTO(
+                        p.getId(),
+                        p.getName(),
+                        p.getLatitude(),
+                        p.getLongitude()
+                ))
+                .toList();
     }
 
     // Haversine in Metern
     private double distance(double lat1, double lon1, double lat2, double lon2) {
-        final int R = 6371000; // Meter
+        final int R = 6371000;
         double dLat = Math.toRadians(lat2 - lat1);
         double dLon = Math.toRadians(lon2 - lon1);
 
@@ -86,6 +117,7 @@ public class PlayerRessources {
         double c = 2 * Math.atan2(Math.sqrt(a), Math.sqrt(1 - a));
         return R * c;
     }
+
 
 
 }
